# TFG_RAG

./: .gitignore  LICENSE  README.md  sonar-project.properties
app/PythIA/: .env  (+9 more)
prototipos/: .gitignore  BaseDatos.py  PliegosPlaywright.py  PliegosPlaywrightAsincrono.py  PliegosSelenium.py  Prompt.py  PrototipoRAG.py  PruebaBaseDatos.py  README.md  pliegos_pdfs.json  pyproject.toml  requirements.txt  resultados_Selenium.json  resultados_playwright_asincrono_servidor.json  script_tokenize.py  script_tokenize_segundoModelo.py  tokenize.py
prototipos/Flask/: .coveragerc  .gitignore  README.md  app.db  docker-compose.yml  entrypoint.sh  forms.py  requirements.txt  run.py  usuario.py
prototipos/Flask/app/: __init__.py  chunk.py  consulta.py  consultaChunk.py  documentos.py  embedding.py  forms.py
prototipos/Flask/templates/: admin_create_user.html  admin_documents.html  admin_upload_pdfs.html  base.html  history.html  index.html  login.html  pag_principal.html  rag.html  singup.html  users.html
prototipos/Flask/tests/: base.py  test_admin.py  test_auth.py  test_decorators.py  test_main.py
prototipos/Flask_docker/: docker-compose.yml  readme.md
prototipos/Flask_docker/app/: consultaChunk.py
prototipos/Flask_docker/nginx/: nginx.conf
prototipos/Flask_docker/templates/: forgot_password.html  login.html  (+1 more)
prototipos/Markdown/: Intento1_Markdown.py  Markdown_Ocr.py  Markdown_Ollama.py  Markdown_Ollama2.py  README.md  pyproject.toml
prototipos/Web Scraping/: DescargarPdf.py  DescargarPliegos.py  PliegosPlaywright.py  PliegosPlaywrightAsincrono.py  PliegosSelenium.py  readme.md  requirements.txt  resultados_playwright.json  resultados_playwright_asincrono.json  resultados_playwright_asincrono_servidor.json
prototipos/tokenizers/: README.md  pyproject.toml  readme.md  requirements.txt  resumen2.json  resumen3.json  script_tokenize.py  script_tokenize_segundoModelo.py  script_tokenizer1.py  script_tokenizer3.py
(+424 files in other folders)
