[project]
name = "prototipos"
version = "0.1.0"
description = "Entorno python para el web Scraping de los prototipos"
authors = [
    {name = "lbr1014",email = "lbr1014@alu.ubu.es"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "playwright (>=1.46.0,<2.0.0)",
    "async-timeout (>=4.0,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "poethepoet (>=0.27,<1.0)"
]
style = [
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.2,<0.15.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # errores, pep8 y orden de imports

[tool.poe.tasks]
setup-browsers = "playwright install chromium"
